# bitpiece

./: Cargo.toml  LICENSE  README.md  design.rs  publish.sh
bitfit_macros/: Cargo.toml
bitpiece_macros/: Cargo.toml
bitpiece_macros/src/: enums.rs  lib.rs  named_struct.rs  named_structs.rs  newtypes.rs  utils.rs
examples/: basic.rs
src/: check.rs  lib.rs  mut_ref.rs  storage.rs  utils.rs
src/impls/: b_types.rs  bool.rs  int_types.rs  mod.rs  sb_types.rs
tests/: b_types.rs  basic.rs  const_context.rs  edge_cases.rs  enums.rs  mut_ref.rs  nesting.rs  opt_in_features.rs  primitive_types.rs  sb_types.rs  structs.rs  trait_usage.rs
tests/common/: mod.rs
