[package]
name = "bitpiece"
version = "0.1.8"
edition = "2021"
authors = ["Roee Shoshani"]
description = "bitfields for rust"
repository = "https://github.com/roeeshoshani/bitpiece"
license = "MIT"
keywords = ["bitfield"]
categories = ["embedded", "encoding", "no-std", "parsing"]

[workspace]
members = ["bitpiece_macros"]

[dependencies]
bitpiece_macros = { path = "bitpiece_macros", version = "0.1.8" }
paste = "1.0.15"
