[package]
name = "bitpiece"
version = "2.1.0"
edition = "2021"
description = "bitfields for rust"
repository = "https://github.com/roeeshoshani/bitpiece"
license = "MIT"
keywords = ["bitfield"]
categories = ["embedded", "encoding", "no-std", "parsing"]

[workspace]
members = ["bitpiece_macros"]

[dependencies]
bitpiece_macros = { path = "bitpiece_macros", version = "2.1.0" }
const_for = "0.1.5"
paste = "1.0.15"
static_assertions = "1.1.0"
