[package]
name = "bitpiece_macros"
version = "0.1.0"
edition = "2021"
authors = ["Roee Shoshani"]
description = "bitfields for rust"
repository = "https://github.com/roeeshoshani/bitpiece"
license = "MIT"
keywords = ["bitfield"]
categories = ["embedded", "encoding", "no-std", "parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.70", features = ["full"] }
