[package]
name = "bitpiece_macros"
version = "2.4.0"
edition = "2021"
description = "bitfields for rust"
repository = "https://github.com/roeeshoshani/bitpiece"
license = "MIT"
keywords = ["bitfield"]
categories = ["embedded", "encoding", "no-std", "parsing"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
enum_all_values_const = "0.1.1"
heck = "0.5.0"
itertools = "0.14.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.70", features = ["full"] }
